# render_deploy_test2

./: pyproject.toml
mysite/: settings.py  urls.py
render/: urls.py  views.py
render/templates/render/: index.html
static/css/: index.css
