[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["brandon23567 <brandonmahuvava0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
